<resources>
    <string name="app_name">Bucharest Tour Guide</string>
    <string name="intro_text">Hello and welcome to Bucharest!</string>
    <string name="shall_we">Let\'s begin, shall we?</string>
    <string name="begin_button">Begin</string>
    <string name="continue_button">Continue</string>
    <string name="details_button">Details</string>
    <string name="localization">Localization</string>
    <string name="details">\t\tBucharest (București) is the capital and largest city of Romania,
        as well as its cultural, industrial, and financial centre.\n\t\t It is located in the southeast
        of the country, on the banks of the Dâmbovița River, less than 60 km North of the Danube River and the Bulgarian border.\n
        Bucharest was first mentioned in documents in 1459. It became the capital of Romania in 1862 and is the centre of Romanian media,
        culture, and art. Its architecture is a mix of historical (neo-classical), interbellum (Bauhaus and art deco), communist-era and modern.
        In the period between the two World Wars, the city\'s elegant architecture and the sophistication of its elite earned Bucharest the nickname
        of "Little Paris" (Micul Paris). \n\t\tAlthough buildings and districts in the historic city centre were heavily damaged or destroyed by war, earthquakes,
        and above all Nicolae Ceaușescu\'s program of systematization, many survived. In recent years, the city has been experiencing an economic and cultural boom.
        In 2016, the historical city centre was listed as "endangered" by the World Monuments Watch.
        \t\tAccording to the 2011 census, 1,883,425 inhabitants live within the city limits, a decrease from the 2002 census. The urban area extends beyond the limits of Bucharest
        proper and has a population of about 1.9 million people. Adding the satellite towns around the urban area, the proposed metropolitan area of Bucharest would have a
        population of 2.27 million people.\n\t\t According to Eurostat, Bucharest has a larger urban zone of 2,183,091 residents. According to unofficial data, the population
        is more than 3 million. Bucharest is the sixth-largest city in the European Union by population within city limits, after London, Berlin, Madrid, Rome, and Paris.
        Economically, Bucharest is the most prosperous city in Romania and is one of the main industrial centres and transportation hubs of Eastern Europe. The city has big convention
        facilities, educational institutes, cultural venues, traditional "shopping arcades", and recreational areas.
        The city proper is administratively known as the "Municipality of Bucharest" (Municipiul București), and has the same administrative level as that of a national county, being
        further subdivided into six sectors, each governed by a local mayor.</string>
    <string name="category_parks">Parks</string>
    <string name="category_historical_places">History</string>
    <string name="category_restaurants">Food</string>
    <string name="category_activities">Activities</string>
    <string name="content_description">Image used for every attraction.</string>
    <string name="city_name">Bucharest</string>
    <string name="palace_of_parliament">Palace of the Parliament</string>
    <string name="romanian_athenaeum">Romanian Athenaeum</string>
    <string name="art_museum">National Museum of Art</string>
    <string name="antipa_museum">Grigore Antipa Museum</string>
    <string name="peasant_museum">Museum of the Romanian Peasant</string>
    <string name="cotroceni_palace">Cotroceni Palace</string>
    <string name="arcul_de_triumf">Arcul de Triumf</string>
    <string name="piata_presei">Piata Presei Libere</string>
    <string name="geology_museum">Geology Museum</string>
    <string name="military_museum">National Military Museum</string>
    <string-array name="historical_palces_array">
        <item>@string/palace_of_parliament</item>
        <item>@string/romanian_athenaeum</item>
        <item>@string/art_museum</item>
        <item>@string/antipa_museum</item>
        <item>@string/peasant_museum</item>
        <item>@string/cotroceni_palace</item>
        <item>@string/arcul_de_triumf</item>
        <item>@string/piata_presei</item>
        <item>@string/geology_museum</item>
        <item>@string/military_museum</item>
    </string-array>
    <string name="palace_of_parliament_location">Strada Izvor 2–4</string>
    <string name="romanian_athenaeum_location">Strada Benjamin Franklin 1–3</string>
    <string name="art_museum_location">Calea Victoriei 49–53</string>
    <string name="antipa_museum_location">Pavel Dimitrievici Kiseleff 1</string>
    <string name="peasant_museum_location">Pavel Dimitrievici Kiseleff 3</string>
    <string name="cotroceni_palace_location">Bulevardul Geniului 1</string>
    <string name="arcul_de_triumf_location">Piața Arcul de Triumf</string>
    <string name="piata_presei_location">Bucharest</string>
    <string name="geology_museum_location">Șoseaua Pavel Dimitrievici Kiseleff</string>
    <string name="military_museum_location">Strada Mircea Vulcănescu 125–127</string>
    <string-array name="historical_places_locations_array">
        <item>@string/palace_of_parliament_location</item>
        <item>@string/romanian_athenaeum_location</item>
        <item>@string/art_museum_location</item>
        <item>@string/antipa_museum_location</item>
        <item>@string/peasant_museum_location</item>
        <item>@string/cotroceni_palace_location</item>
        <item>@string/arcul_de_triumf_location</item>
        <item>@string/piata_presei_location</item>
        <item>@string/geology_museum_location</item>
        <item>@string/military_museum_location</item>
    </string-array>
    <string name="palace_of_parliament_geolocation">https://www.google.ro/maps/place/Palace+of+Parliament/@44.4275035,26.0851619,17z/data=!3m1!4b1!4m5!3m4!1s0x40b1ff427bee28c1:0x2b1089f802abaddc!8m2!3d44.4275035!4d26.0873506?hl=en</string>
    <string name="romanian_athenaeum_geolocation">https://www.google.ro/maps/place/Romanian+Athenaeum/@44.4413811,26.0952074,17z/data=!3m1!4b1!4m5!3m4!1s0x40b1ff4f6e6d7997:0x5a73af5fe07876f2!8m2!3d44.4413811!4d26.0973961?hl=en</string>
    <string name="art_museum_geolocation">https://www.google.ro/maps/place/The+National+Museum+of+Art+of+Romania/@44.4393668,26.0936853,17z/data=!3m1!4b1!4m5!3m4!1s0x40b1ff45a2c1486f:0xdea7c86f153f2330!8m2!3d44.4393668!4d26.095874?hl=en</string>
    <string name="antipa_museum_geolocation">https://www.google.ro/maps/place/Antipa+Museum/@44.4531131,26.0824495,17z/data=!3m1!4b1!4m5!3m4!1s0x40b201ff7eb6eee5:0x120b912fe44ec81d!8m2!3d44.4531131!4d26.0846382?hl=en</string>
    <string name="peasant_museum_geolocation">https://www.google.ro/maps/place/Museum+of+the+Romanian+Peasant/@44.4544198,26.08268,18z/data=!3m1!4b1!4m5!3m4!1s0x40b20201893a4cd1:0xddcebd3aef3114e3!8m2!3d44.4544198!4d26.0836002?hl=en</string>
    <string name="cotroceni_palace_geolocation">https://www.google.ro/maps/place/Muzeul+Cotroceni/@44.4352431,26.0611689,17z/data=!3m1!4b1!4m5!3m4!1s0x40b201dbbe0b8639:0xeca7ba35fbc72d4d!8m2!3d44.4352431!4d26.0633576?hl=en</string>
    <string name="arcul_de_triumf_geolocation">https://www.google.ro/maps/place/The+Arch+Of+Triumph/@44.4671772,26.076284,17z/data=!3m1!4b1!4m5!3m4!1s0x40b202172654ca11:0x57ae7c6e837bc61b!8m2!3d44.4671772!4d26.0781245?hl=en</string>
    <string name="piata_presei_geolocation">https://www.google.ro/maps/place/House+of+Free+Press/@44.4808943,26.0707983,16.5z/data=!4m5!3m4!1s0x40b202460cd034ab:0x73f1ec0f99c1adf6!8m2!3d44.4809135!4d26.0712498?hl=en</string>
    <string name="geology_museum_geolocation">https://www.google.ro/maps/place/National+Geology+Museum/@44.4548484,26.0830343,17z/data=!3m1!4b1!4m5!3m4!1s0x40b20201bfdd0fad:0xbe5366e04a0b1d45!8m2!3d44.4548484!4d26.085223?hl=en</string>
    <string name="military_museum_geolocation">https://www.google.ro/maps/place/National+Military+Museum/@44.4407516,26.0744093,17z/data=!3m1!4b1!4m5!3m4!1s0x40b201e2102a641b:0x7a32aefdf0d8b116!8m2!3d44.4407516!4d26.076598?hl=en</string>
    <string-array name="historical_places_geolocations_array">
        <item>@string/palace_of_parliament_geolocation</item>
        <item>@string/romanian_athenaeum_geolocation</item>
        <item>@string/art_museum_geolocation</item>
        <item>@string/antipa_museum_geolocation</item>
        <item>@string/peasant_museum_geolocation</item>
        <item>@string/cotroceni_palace_geolocation</item>
        <item>@string/arcul_de_triumf_geolocation</item>
        <item>@string/piata_presei_geolocation</item>
        <item>@string/geology_museum_geolocation</item>
        <item>@string/military_museum_geolocation</item>
    </string-array>
    <string name="bazilescu_park">Bazilescu Park</string>
    <string name="herastrau_park">Herastrau Park</string>
    <string name="cuza_park">Alexandru Ioan Cuza Park</string>
    <string name="drumul_taberei_park">Drumul Taberei Park</string>
    <string name="izvor_park">Izvor Park</string>
    <string name="tineretului_park">Tineretului Park</string>
    <string name="vacaresti_park">Vacaresti Park</string>
    <string name="cismigiu_garden">Cismigiu Garden</string>
    <string-array name="parks_array">
        <item>@string/bazilescu_park</item>
        <item>@string/herastrau_park</item>
        <item>@string/cuza_park</item>
        <item>@string/drumul_taberei_park</item>
        <item>@string/izvor_park</item>
        <item>@string/tineretului_park</item>
        <item>@string/vacaresti_park</item>
        <item>@string/cismigiu_garden</item>
    </string-array>
    <string name="bazilescu_park_location">Bulevardul Bucurestii Noi</string>
    <string name="herastrau_park_location">Bucharest</string>
    <string name="cuza_park_location">Titan</string>
    <string name="drumul_taberei_park_location">Drumul Taberei</string>
    <string name="izvor_park_location">Strada Izvor 2–4</string>
    <string name="tineretului_park_location">Bucharest</string>
    <string name="vacaresti_park_location">Bucharest</string>
    <string name="cismigiu_garden_location">Bulevardul Regina Elisabeta</string>
    <string-array name="parks_location_array">
        <item>@string/bazilescu_park_location</item>
        <item>@string/herastrau_park_location</item>
        <item>@string/cuza_park_location</item>
        <item>@string/drumul_taberei_park_location</item>
        <item>@string/izvor_park_location</item>
        <item>@string/tineretului_park_location</item>
        <item>@string/vacaresti_park_location</item>
        <item>@string/cismigiu_garden_location</item>
    </string-array>
    <string name="bazilescu_park_geolocation">https://www.google.ro/maps/place/Parcul+Bazilescu/@44.4886196,26.0323808,17z/data=!3m1!4b1!4m5!3m4!1s0x40b203bef9b8dcef:0x9480bb106125e2ab!8m2!3d44.4886196!4d26.0345695?hl=en</string>
    <string name="herastrau_park_geolocation">https://www.google.ro/maps/place/Herastrau+Park/@44.4684728,26.0783423,17z/data=!3m1!4b1!4m5!3m4!1s0x40b2026a77968d29:0x7554c9ac9eeef831!8m2!3d44.468469!4d26.080531?hl=en</string>
    <string name="cuza_park_geolocation">https://www.google.ro/maps/place/Alexandru+Ioan+Cuza+Park/@44.4255117,26.1513445,17z/data=!3m1!4b1!4m5!3m4!1s0x40b1feb663d02dd3:0xf0489031c3cf5127!8m2!3d44.4255117!4d26.1535332?hl=en</string>
    <string name="drumul_taberei_park_geolocation">https://www.google.ro/maps/place/Parcul+Drumul+Taberei/@44.4208643,26.0291138,17z/data=!3m1!4b1!4m5!3m4!1s0x40b20036c2aff6b1:0x8772154e0f9b91ea!8m2!3d44.4208643!4d26.0313025?hl=en</string>
    <string name="izvor_park_geolocation">https://www.google.ro/maps/place/Parcul+Izvor/@44.4318548,26.0852621,17z/data=!3m1!4b1!4m5!3m4!1s0x40b1ff69caad53bd:0x5f5bfeef1ae990d5!8m2!3d44.4318548!4d26.0874508?hl=en</string>
</resources>