<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_bucharest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.android.tourguidebucharest.AboutBucharest">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/localization" />

    <Button
        android:id="@+id/details_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:text="@string/details_button"
        android:textColor="@color/textWhite" />

    <Button
        android:id="@+id/continue_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:text="@string/continue_button"
        android:textColor="@color/textWhite" />

</LinearLayout>